--- a/views/layouts/classic-office-layout.hbs
+++ b/views/layouts/classic-office-layout.hbs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/office.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -35,8 +36,8 @@
 
 
         <!-- Toolbar -->
-        <div class="toolbar">
-            <button>New</button>
+        <div class="toolbar {{#if settings.hideToolbar}}hidden{{/if}}">
+            <button>New {{ settings.hideToolbar}}</button>
             <button>Open</button>
             <button>Save</button>
             <button>Print</button>
